--- a/lambdas/add-battle-to-db/add-video-to-db/package.json
+++ b/lambdas/add-battle-to-db/add-video-to-db/package.json
@@ -7,6 +7,7 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1493.0",
     "axios": ">=0.21.1",
     "he": "^1.2.0",
     "pg": "^8.11.3"
