--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,11 @@ default: &default
 
 development:
   <<: *default
-  host: localhost
-  database: lrc_development
+  host: <%= ENV.fetch('AWS_RDS_HOST') %>
+  username: <%= ENV.fetch('AWS_RDS_USERNAME') %>
+  password: <%= ENV.fetch('AWS_RDS_PASSWORD') %>
+  database: <%= ENV.fetch('AWS_RDS_NAME') %>
+  port: <%= ENV.fetch('AWS_RDS_PORT') %>
 
 production:
   <<: *default
